--- a/index.html
+++ b/index.html
@@ -15,13 +15,22 @@
         <p><b>Grupo N°:</b> 04</p>
     </div>
     <div class="container-btn">
-        <a class="btn" href="Ejemplo1.xml">Ejemplo 1</a>
-        <a class="btn" href="#">Ejemplo 1a</a>
-        <a class="btn" href="#">Ejemplo 1b</a>
-        <a class="btn" href="#">Ejemplo 2</a>
-        <a class="btn" href="#">Ejemplo 2a</a>
-        <a class="btn" href="#">Ejemplo 2b</a>
-        <a class="btn" href="#">Ejemplo 3</a>
+        <h3>XML</h3>
+        <a class="btn btn-blue" href="xml/Ejemplo1.xml">Ejemplo 1</a>
+        <a class="btn btn-blue" href="xml/Ejercicio1a.xml">Ejercicio 1a</a>
+        <a class="btn btn-blue" href="xml/Ejercicio1b.xml">Ejercicio 1b</a>
+        <a class="btn btn-blue" href="xml/Ejemplo2.xml">Ejemplo 2</a>
+        <a class="btn btn-blue" href="xml/Ejercicio2a.xml">Ejercicio 2a</a>
+        <a class="btn btn-blue" href="xml/Ejercicio2b.xml">Ejemplo 2b</a>
+    </div>
+    <div class="container-btn">
+        <h3>JSON</h3>
+        <a class="btn btn-orange" href="json/ejemplo1.json">Ejemplo 1</a>
+        <a class="btn btn-orange" href="json/ejercicio1a.json">Ejercicio 1a</a>
+        <a class="btn btn-orange" href="json/ejercicio1b.json">Ejercicio 1b</a>
+        <a class="btn btn-orange" href="json/ejemplo2.json">Ejemplo 2</a>
+        <a class="btn btn-orange" href="json/ejercicio2a.json">Ejercicio 2a</a>
+        <a class="btn btn-orange" href="json/ejercicio2b.json">Ejercicio 2b</a>
     </div>
 </body>
 </html>
